Minor prettification of stuff, fixed banner overlap with min-height on #info

--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -45,7 +45,7 @@ h6 {
     padding: 7px 16px;
     border: 2px solid #fff;
     border-radius: 100%!important;
-    font-size: 40px;
+    font-size: 30px;
     color: #fff;
     background: 0 0;
     -webkit-transition: background .3s ease-in-out;
@@ -82,13 +82,14 @@ h6 {
 .intro-message {
     position: relative;
     padding-top: 10%;
-    padding-bottom: 10%;
+    padding-bottom: 1   0%;
 }
 
 .intro-message > h1 {
     margin: 0;
     text-shadow: 2px 2px 3px rgba(0,0,0,0.6);
     font-size: 5em;
+    -webkit-text-stroke: .5px black;
 }
 
 .intro-divider {
@@ -99,6 +100,7 @@ h6 {
 
 .intro-message > h3 {
     text-shadow: 2px 2px 3px rgba(0,0,0,0.6);
+    -webkit-text-stroke: .25px black;
 }
 
 @media(max-width:767px) {
@@ -223,7 +225,9 @@ p.copyright {
 }
 
 #info {
+    padding: 50px 0;
     height: 50%;
+    min-height:345px;
 }
 
 #home, #mapRow, #mapContainer {
@@ -236,6 +240,18 @@ p.copyright {
     padding-left: 0px;
  }
 
+#splash-button {
+    position:absolute;
+    bottom: 5px;
+    margin: 0 auto;
+    width: 99%;
+}
+
+#about {
+    padding: 50px;
+    border-bottom: 1px solid;
+    border-color: #e7e7e7;
+}
 
 /*
 section {
